# advent-of-code-2020

./: .clang-format  .gitignore  CMakeLists.txt  README.md
day-1/: CMakeLists.txt  day_1.cpp
day-10/: CMakeLists.txt  day_10.cpp
day-11/: CMakeLists.txt  day_11.cpp
day-12/: CMakeLists.txt  day_12.cpp
day-13/: CMakeLists.txt  day_13.cpp
day-14/: CMakeLists.txt  day_14.cpp
day-15/: day_15.py
day-16/: CMakeLists.txt  day_16.cpp
day-17/: CMakeLists.txt  cube.h  day_17.cpp
day-18/: CMakeLists.txt  day_18.cpp  sample.txt
day-19/: CMakeLists.txt  day_19.py
day-2/: CMakeLists.txt  day_2.cpp
day-20/: CMakeLists.txt  day_20.cpp  grid.cpp  grid.h  reconstruct_image.h
day-21/: day_21.py
day-22/: day_22.py
day-23/: CMakeLists.txt  circular_list.h  day-23.py  day_23.cpp
day-24/: day_24.py
day-25/: CMakeLists.txt  day_25.cpp  day_25.py
day-3/: CMakeLists.txt  day_3.cpp
day-4/: CMakeLists.txt  day_4.cpp
day-5/: CMakeLists.txt  day_5.cpp
day-6/: day_6.py
day-7/: CMakeLists.txt  better_string.h  day_7.cpp
day-8/: CMakeLists.txt  day_8.cpp
day-9/: CMakeLists.txt  day_9.cpp
tests/: CMakeLists.txt  graph_tests.cpp  grid_tests.cpp  main.cpp  string_utilities_tests.cpp
utilities/: combinations.h  graph.h  grid.h  string_utilities.h
